--- a/travel.html
+++ b/travel.html
@@ -172,9 +172,9 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>	
 		
 
-<!--Maps API Remember API KEY!-->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDe-G68ZGE-o0U-fspMqDRV6EgutP_bup0&callback=initMap">
-	</script>		
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=+ mykey&callback=initMap">
+	</script>			
 
 
 
