--- a/travel.html
+++ b/travel.html
@@ -173,8 +173,9 @@
 		
 
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=+ mykey&callback=initMap">
-	</script>			
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM6lWqB90Ja368zFa4E5tCLTV4WWENKOQ&callback=initMap"</script>		
+
+	
 
 
 
