--- a/travel.html
+++ b/travel.html
@@ -19,12 +19,30 @@
 	<title>Brooklyn Outdoor Film Festival 2019</title>
 
 
+    <style>
+       /* Set the size of the div element that contains the map */
+      #map {
+        height: 400px;  /* The height is 400 pixels */
+        width: 100%;  /* The width is the width of the web page */
+       }
+    </style>
 
-	
-	
 	
 				
 </head>
+	
+	<div id="map"></div>
+    <script>
+// Initialize and add the map
+function initMap() {
+  // The location of Uluru
+  var uluru = {lat: -25.344, lng: 131.036};
+  // The map, centered at Uluru
+  var map = new google.maps.Map(
+      document.getElementById('map'), {zoom: 4, center: uluru});
+  // The marker, positioned at Uluru
+  var marker = new google.maps.Marker({position: uluru, map: map});
+}
 	
 		
 <!--Nav Bar Section --> 
@@ -169,9 +187,9 @@
 		
 
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM6lWqB90Ja368zFa4E5tCLTV4WWENKOQ&callback=initMap"</script>		
-
-	
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM6lWqB90Ja368zFa4E5tCLTV4WWENKOQ&callback=initMap">
+    </script>
 
 
 
