--- a/travel.html
+++ b/travel.html
@@ -17,18 +17,19 @@
 
 
 	<title>Brooklyn Outdoor Film Festival 2019</title>
+	
     <style>
        /* Set the size of the div element that contains the map */
       #map {
         height: 400px;  /* The height is 400 pixels */
         width: 100%;  /* The width is the width of the web page */
        }
-    </style>
-    </style>
 
+    </style>
 				
 </head>
 
+<body>
 		
 <!--Nav Bar Section --> 
 	<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top">
@@ -167,15 +168,11 @@ function initMap() {
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>	
-		
-
+	
 
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM6lWqB90Ja368zFa4E5tCLTV4WWENKOQ&callback=initMap">
     </script>
-
-
-
 
 </body>
 </html>
